--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,21 @@
 @import "tailwindcss";
+
+::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 50px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 50px;
+    background-color: rgb(199, 199, 199);
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: 50px;
+    background-color: rgb(156, 156, 156);
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background-color:rgb(110, 110, 110);
+    cursor: pointer;
+}
